# sphere

./: .gitignore  README.md
glome/common/: AnimationFactory.hpp  DefaultFile.cpp  DefaultFile.hpp  DefaultFileSystem.cpp  DefaultFileSystem.hpp  Entities.cpp  FLICAnimation.cpp  FLICAnimation.hpp  Filters.hpp  Font.cpp  Font.hpp  IFile.hpp  Image32.cpp  Image32.hpp  Layer.hpp  Log.hpp  LogDispatcher.hpp  LogFile.hpp  LogNull.hpp  LogWindow.hpp  MNGAnimation.cpp  Makefile  Makefile.in  Map.cpp  Map.hpp  ObstructionMap.hpp  PackageFile.cpp  PackageFile.hpp  PackageFileSystem.cpp  PackageFileSystem.hpp  Spriteset.hpp  Tile.cpp  Tileset.cpp  Tileset.hpp  WindowStyle.hpp  common_palettes.cpp  common_palettes.hpp  packed.hpp  primitives.hpp  (+2 more)
helpfile/: DevBasic.chm  NewTopic1.htm  NewTopic11.htm  NewTopic13.htm  NewTopic14.htm  NewTopic17.htm  NewTopic19.htm  NewTopic22.htm  NewTopic25.htm  NewTopic26.htm  NewTopic27.htm  NewTopic3.htm  NewTopic30.htm  NewTopic31.htm  NewTopic33.htm  NewTopic35.htm  NewTopic4.htm  NewTopic5.htm  NewTopic6.htm  Sphere.chm
sphere/: .gitignore  README.md  SConstruct  autocons.py  sphere.sln
sphere/glome/common/: AnimationFactory.cpp  Entities.hpp  Filters.cpp  IAnimation.hpp  IFileSystem.hpp  Layer.cpp  Log.cpp  LogDispatcher.cpp  LogFile.cpp  LogNull.cpp  LogWindow.cpp  MNGAnimation.hpp  Makefile.am  ObstructionMap.cpp  Spriteset.cpp  Tile.hpp  WindowStyle.cpp  begin_packed_struct.h  configfile.cpp  configfile.hpp  end_packed_struct.h  endian.hpp  sphere_version.h  spk.hpp  strcmp_ci.hpp
web/: about.php  constants.php  index.php  users.php
(+657 files in other folders)
