noinst_LIBRARIES = libcommon.a
libcommon_a_SOURCES = \
AnimationFactory.cpp \
DefaultFile.cpp \
DefaultFileSystem.cpp \
Entities.cpp \
FLICAnimation.cpp \
Filters.cpp \
Font.cpp \
Image32.cpp \
Layer.cpp \
Log.cpp \
LogDispatcher.cpp \
LogFile.cpp \
LogNull.cpp \
MNGAnimation.cpp \
Map.cpp \
ObstructionMap.cpp \
PackageFile.cpp \
PackageFileSystem.cpp \
Spriteset.cpp \
Tile.cpp \
Tileset.cpp \
WindowStyle.cpp \
common_palettes.cpp \
configfile.cpp
